[project]
name = "mini-claw"
version = "0.1.0"
description = "Minimal AI coding assistant powered by pi-mono concepts"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.81.0",
    "openai>=2.21.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
mini-claw = "miniclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miniclaw"]
